--- a/debian/rules
+++ b/debian/rules
@@ -15,11 +15,13 @@
 # limitations under the License.
 #
 
+DEB_HOST_GNU_CPU ?= $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
+
 %:
 	dh $@
 
 override_dh_install:
-	./scripts/fetch-and-run-installer.sh "1.63.0" "/usr" "debian/tmp"
+	./scripts/fetch-and-run-installer.sh "1.63.0" "/usr" "debian/tmp" $(DEB_HOST_GNU_CPU)
 
 	dh_install --autodest "debian/tmp/*"
 
